# fitting-xsecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: xsecs_db_GALPROP.txt
include/: channel.h  chi2.h  data.h  minimizer.h  model.h
src/: channel.cpp  data.cpp  main.cpp  minimizer.cpp  model.cpp
